Added pick ban predictions algorithm